@@ -55,3 +55,13 @@ tasks.withType(Test) {
         }
     }
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add("--add-opens=java.base/java.lang=ALL-UNNAMED")
+}
+
+task api_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("API")
+    }
+}
